Fix overflow scroll bug on iOS

--- a/sass/form.scss
+++ b/sass/form.scss
@@ -46,13 +46,13 @@
 }
 
 .trifi-body{
-	@include transform( translate3d(0,0,0) );
 	position:absolute;
 	top:0;
 	right:0;
 	bottom:0;
 	left:0;
 	overflow:scroll;
+	-webkit-overflow-scrolling:touch;
 	padding:2em;
 }
 
